Adicionando bairro ao formulário

--- a/index.html
+++ b/index.html
@@ -60,6 +60,11 @@
                 </div>
                 <br><br>
                 <div class="inputbox">
+                    <input type="text" name="bairro" id="bairro" class="inputuser" required>
+                    <label for="bairro" class="labelinput">Bairro</label>
+                </div>
+                <br><br>
+                <div class="inputbox">
                     <input type="text" name="endereco" id="endereco" class="inputuser" required>
                     <label for="endereco" class="labelinput">Endereço</label>
                 </div>
