--- a/index.html
+++ b/index.html
@@ -2,74 +2,69 @@
 <html lang="pt-br">
 <head>
     <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Formulário de Cadastro</title>
     <link rel="stylesheet" href="style.css">
-    <link rel="icon" href="formulario.ico" type="image/x-icon">
-    <title>Formulário de cadastro</title>
-    <script src="script.js" defer></script>
 </head>
-<body class="bg" >
+<body>
     <div class="box">
         <form action="">
             <fieldset>
-                <br>
                 <div class="inputbox">
                     <input type="text" name="nome" id="nome" class="inputuser" required>
                     <label for="nome" class="labelinput">Nome Completo</label>
                 </div>
-                <br><br>
+
                 <div class="inputbox">
-                    <input type="text" name="email" id="email" class="inputuser" required>
+                    <input type="email" name="email" id="email" class="inputuser" required>
                     <label for="email" class="labelinput">Email</label>
                 </div>
-                <br><br>
+
                 <div class="inputbox">
                     <input type="tel" name="telefone" id="telefone" class="inputuser" required>
                     <label for="telefone" class="labelinput">Telefone</label>
                 </div>
-                <br>
+
                 <p>Sexo:</p>
-                <input type="radio" id="feminino" name="genero" value="feminino" required>
-                <label for="feminino" >Feminino</label>
-                <br>
-                <input type="radio" id="masculino" name="genero" value="masculino" required>
-                <label for="masculino" >Masculino</label>
-                <br>
-                <input type="radio" id="outro" name="genero" value="outro" required>
-                <label for="outro" >Outro</label>
-                <br><br>
+                <div class="input-radio">
+                    <input type="radio" id="feminino" name="genero" value="feminino" required>
+                    <label for="feminino">Feminino</label>
+                </div>
+                <div class="input-radio">
+                    <input type="radio" id="masculino" name="genero" value="masculino" required>
+                    <label for="masculino">Masculino</label>
+                </div>
+                <div class="input-radio">
+                    <input type="radio" id="outro" name="genero" value="outro" required>
+                    <label for="outro">Outro</label>
+                </div>
+
                 <div class="inputbox">
-                    <label for="data_nascimento" ><strong>Data de Nascimento</strong></label>
+                    <label for="data_nascimento">Data de Nascimento</label>
                     <input type="date" name="data_nascimento" id="data_nascimento" required>
                 </div>
-                <br><br>
+
                 <div class="inputbox">
                     <input type="text" name="cep" id="cep" class="inputuser" required onblur="buscarEndereco()">
                     <label for="cep" class="labelinput">CEP</label>
                 </div>
-                <br><br>
+
                 <div class="inputbox">
                     <input type="text" name="cidade" id="cidade" class="inputuser" required>
                     <label for="cidade" class="labelinput">Cidade</label>
                 </div>
-                <br><br>
+
                 <div class="inputbox">
                     <input type="text" name="estado" id="estado" class="inputuser" required>
                     <label for="estado" class="labelinput">Estado</label>
                 </div>
-                <br><br>
-                <div class="inputbox">
-                    <input type="text" name="bairro" id="bairro" class="inputuser" required>
-                    <label for="bairro" class="labelinput">Bairro</label>
-                </div>
-                <br><br>
+
                 <div class="inputbox">
                     <input type="text" name="endereco" id="endereco" class="inputuser" required>
                     <label for="endereco" class="labelinput">Endereço</label>
                 </div>
-                <br><br>
-                <input type="submit" name="submit" id="submit" >
+
+                <input type="submit" name="submit" id="submit">
             </fieldset>
         </form>
     </div>
